# Measurement_Time

./: README.md  Report.pptx
gettime/: CMakeLists.txt  RAW  gettime_overhead.c  gettime_overhead_raw.c  opt.out  regular.out  results.txt
gettime/results/: cpu_process_cputime.txt  cpu_process_cputime_baseline.txt  cpu_process_cputime_diff.txt  monotonic.txt  monotonic_baseline.txt  monotonic_diff.txt  monotonic_raw.txt  monotonic_raw_baseline.txt  monotonic_raw_diff.txt  realtime.txt  realtime_baseline.txt  realtime_diff.txt  splitAndProcessResults.sh
graphing_py_scripts/: bar_graph.py
thrift/: p1-env
thrift/Echo/: Echo_client.cpp  Echo_server_simple.cpp
thrift/Echo/gen-cpp/: Echo.cpp  Echo.h  Echo_server.skeleton.cpp
thrift/Echo/v1/: CppClient  CppServer  Echo_client.cpp  Echo_server_simple.cpp  makefile
thrift/Echo/v2/: CMakeLists.txt  CppClient  CppServer  Echo_server.cpp  makefile
thrift/Echo/v3/: CMakeLists.txt  CppClient  CppServer  Echo_client.cpp  Echo_server.cpp  looper.sh  looper.sh~  makefile  makefile~
thrift/Tutorial/try1/: CMakeLists.txt  CppClient.cpp  makefile  makefile~
thrift/Tutorial_bak/try1/: CppClient  CppClient.cpp  CppServer
time_measurement/: CMakeLists.txt  gettime_overhead.c
